--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-individual-character-input-boxes": "^1.2.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-terminal-ui": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "18.0.25",
