--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
+    "test": "yarn prettier:check && yarn lint"
   },
   "dependencies": {
     "@next/font": "^13.0.4",
@@ -21,9 +25,17 @@
     "react-terminal-ui": "^1.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "husky": "^8.0.2",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
