--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-individual-character-input-boxes": "^1.2.1",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "react-terminal-ui": "^1.0.0",
     "react-transition-group": "^4.4.5"
   },
