--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "yarn prettier:check && yarn lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@lionello/secp256k1-js": "^1.1.0",
     "@next/font": "13.0.4",
@@ -36,6 +47,7 @@
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.18",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
