--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
     "test": "yarn prettier:check && yarn lint",
     "postinstall": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint-staged"
-    }
-  },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "**/*.{js,jsx}": "prettier --write",
+    "**/*.{ts,tsx}": [
       "prettier --write",
-      "git add"
+      "tsc-files --noEmit"
     ]
   },
   "dependencies": {
@@ -52,6 +48,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.2",
+    "tsc-files": "^1.1.3",
     "typescript": "4.8.4"
   }
 }
