--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/font": "13.0.4",
     "clsx": "^1.2.1",
     "date-fns": "2.29.3",
+    "lodash": "^4.17.21",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
