--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "postinstall": "husky install"
   },
   "lint-staged": {
-    "**/*.{js,jsx}": "prettier --write",
-    "**/*.{ts,tsx}": [
-      "prettier --write",
-      "tsc-files --noEmit"
-    ]
+    "**/*.{js,jsx,ts,tsx}": "prettier --write"
   },
   "dependencies": {
     "@lionello/secp256k1-js": "^1.1.0",
@@ -32,7 +28,8 @@
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "react-terminal-ui": "^1.0.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
@@ -47,7 +44,6 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.2",
-    "tsc-files": "^1.1.3",
     "typescript": "4.8.4"
   }
 }
