add react-intl boilterplate

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-individual-character-input-boxes": "^1.2.1",
+    "react-intl": "^6.2.7",
     "react-jsx-parser": "^1.29.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
