Add: success animation

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "accept-language": "^3.0.18",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
     "next": "13.0.4",
     "react": "18.2.0",
