--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "accept-language": "^3.0.18",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
-    "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
     "react-modal": "^3.16.1",
     "react-transition-group": "^4.4.5",
     "use-local-storage-state": "^18.1.2"
