--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-transition-group": "^4.4.5",
+    "sjcl": "^1.0.8",
     "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
