--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "negotiator": "^0.6.3",
     "next": "13.0.4",
     "next-transpile-modules": "^10.0.0",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
