--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.2.32",
     "@lionello/secp256k1-js": "^1.1.0",
+    "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.0.4",
     "accept-language": "^3.0.18",
+    "acorn": "^8.8.2",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.36.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "negotiator": "^0.6.3",
     "next": "13.0.4",
+    "next-transpile-modules": "^10.0.0",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-monaco-editor": "^0.52.0",
     "react-transition-group": "^4.4.5",
     "use-local-storage-state": "^18.1.2"
   },
