--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.2.32",
-    "@lionello/secp256k1-js": "^1.1.0",
     "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.0.4",
+    "@noble/secp256k1": "^2.0.0",
     "accept-language": "^3.0.18",
     "acorn": "^8.8.2",
     "clsx": "^1.2.1",
