--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@noble/secp256k1": "^2.0.0",
     "accept-language": "^3.0.18",
     "acorn": "^8.8.2",
+    "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
