Replace REPL solution (#494)

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@noble/secp256k1": "^2.0.0",
     "accept-language": "^3.0.18",
     "acorn": "^8.8.2",
+    "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
@@ -28,7 +29,6 @@
     "negotiator": "^0.6.3",
     "next": "^13.3.1",
     "next-transpile-modules": "^10.0.0",
-    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-monaco-editor": "^0.52.0",
