--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
     "react-monaco-editor": "^0.52.0",
     "react-transition-group": "^4.4.5",
     "sjcl": "^1.0.8",
@@ -46,6 +47,7 @@
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.2",
+    "json-loader": "^0.5.7",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.18",
     "prettier": "^2.8.1",
