chore: Added ws endpoint to example env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_ENDPOINT=<url-of-your-locally-running-backend|https://api.savingsatoshi.com>
+NEXT_PUBLIC_WS_ENDPOINT=<url-of-your-locally-running-backend|wss://api.savingsatoshi.com>
