--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "yarn prettier:check && yarn lint",
+    "test": "yarn prettier:check && yarn lint && yarn jest",
     "postinstall": "husky install"
   },
   "lint-staged": {
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "18.11.19",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
@@ -47,12 +48,14 @@
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.2",
+    "jest": "^29.7.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.18",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.2",
+    "ts-jest": "^29.1.1",
     "typescript": "4.8.4"
   }
 }
