--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "negotiator": "^0.6.3",
     "next": "^13.4.19",
     "next-transpile-modules": "^10.0.0",
+    "nostr-hooks": "^1.8.0",
+    "nostr-tools": "^1.14.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
