--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "constrained-editor-plugin": "^1.3.0",
+    "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.36.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
