--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "constrained-editor-plugin": "^1.3.0",
+    "framer-motion": "^11.3.27",
     "jotai": "^2.8.0",
     "jotai-effect": "^1.0.0",
     "lodash": "^4.17.21",
