feat: add drag and drop functionality to OpRunner

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.2.32",
+    "@hello-pangea/dnd": "^16.6.0",
     "@monaco-editor/react": "^4.6.0",
     "@noble/secp256k1": "^2.0.0",
     "accept-language": "^3.0.18",
@@ -42,7 +43,8 @@
     "react-monaco-editor": "^0.52.0",
     "react-transition-group": "^4.4.5",
     "sjcl": "^1.0.8",
-    "use-local-storage-state": "^18.1.2"
+    "use-local-storage-state": "^18.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
