--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react-monaco-editor": "^0.52.0",
     "react-transition-group": "^4.4.5",
     "sjcl": "^1.0.8",
-    "use-local-storage-state": "^18.1.2",
-    "uuid": "^10.0.0"
+    "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
