--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nostr-tools": "^1.14.2",
     "react": "18.2.0",
     "react-archer": "^4.4.0",
+    "react-beautiful-dnd": "10.0.4",
     "react-dom": "18.2.0",
     "react-lottie": "^1.2.3",
     "react-monaco-editor": "^0.52.0",
