feat: add i18n linter and expand linter to cover ui dir

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --dir .",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "yarn prettier:check && yarn lint && yarn jest",
@@ -24,6 +24,7 @@
     "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "constrained-editor-plugin": "^1.3.0",
+    "eslint-plugin-intl": "inventhouse/eslint-plugin-intl",
     "framer-motion": "^11.3.27",
     "jotai": "^2.8.0",
     "jotai-effect": "^1.0.0",
