--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
   "extends": ["next/core-web-vitals", "prettier"],
+  "settings": {
+    "next": {
+      "rootDir": "./"
+    }
+  },
   "plugins": ["intl"],
   "rules": {
     "intl/no-bare-text": ["warn"]
