--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "ansi-to-html": "^0.7.2",
     "clsx": "^1.2.1",
     "constrained-editor-plugin": "^1.3.0",
-    "eslint-plugin-intl": "inventhouse/eslint-plugin-intl",
     "framer-motion": "^11.3.27",
     "jotai": "^2.8.0",
     "jotai-effect": "^1.0.0",
@@ -55,6 +54,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-local-rules": "^3.0.2",
     "husky": "^8.0.2",
     "jest": "^29.7.0",
     "json-loader": "^0.5.7",
