--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-local-rules": "^3.0.2",
     "husky": "^8.0.2",
     "jest": "^29.7.0",
     "json-loader": "^0.5.7",
