Call BOSS bot to generate next challenge clue

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_API_ENDPOINT=<url-of-your-locally-running-backend|https://api.savingsatoshi.com>
 NEXT_PUBLIC_WS_ENDPOINT=<url-of-your-locally-running-backend|wss://api.savingsatoshi.com>
+NEXT_PUBLIC_BOSSBOT_API_ENDPOINT=something
+NEXT_PUBLIC_BOSSBOT_AUTH=something
+
+# If running the backend locally, the env vars will look something like this:
+# NEXT_PUBLIC_API_ENDPOINT=http://localhost:8000
+# NEXT_PUBLIC_WS_ENDPOINT=http://localhost:8000
